# LinkSCRIBE

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  LinkScribe.ipynb  api.py  main.py  model_loader.py  pyproject.toml  url_scraping.py
frontend/: Dockerfile
frontend/pagi/: index.php
frontend/pagi/assests/CSS/: estilospag.css
frontend/pagi/paginas/: bienvenida.php  consultas.php  soliApi.php
frontend/pagi/php/: conexion_be.php  login_usuario_be.php  registro_usuario_be.php
